2009-08-08  Vincent Untz  <vuntz@gnome.org>

	* src/control-center.c: (main): use the "current" icon theme for yast,
	instead of NLD.

2009-01-31  Vincent Untz  <vuntz@gnome.org>

	* src/control-center.c: (main): force not using the default handler for
	gconf errors. libgnomeui sets one, and when a program is run under "su"
	(not "su -"), we get gconf errors. And this program is often run under
	"su", it seems :-)

2008-05-12  Michael Meeks  <michael.meeks@novell.com>

	* Version 2.13.3

	* aclocal.m4: remove auto-generated file.

	* src/control-center.c (main): tolerate unknown
	arguments, like '-S' silently: 389069

2007-09-27  Scott Reeves  <sreeves@novell.com>
	Fix for 328615 - untranslated because of /opt/gnome to /usr

2007-05-14  Scott Reeves  <sreeves@novell.com>
	Fix for 259542 - not translated
	Fix for 245970 - install into y2bindir.

2007-03-19  Scott Reeves  <sreeves@novell.com>
	* etc/YaST-gnome.menu
	* etc/yast-gnome-virtualization.directory:
	Fix for 254718 - additional menu items

2007-03-16  Scott Reeves  <sreeves@novell.com>
	* etc/YaST-gnome.menu
	* etc/yast2-control-center-gnome.schemas.in
	* /src/control-center.c:
	Fix for 249717 - change icon
	Fix for 252799 - merge in add on menus
	Use correct .directory names in menu file
	schema back to /desktop prefix - main-menu checks for some of it there.

2007-03-12  Scott Reeves  <sreeves@novell.com>
	* /src/control-center.c:
	Fix for 250415 - allow different theming for the cc shell
	Fix for 249717 - change title to "YaST2 Control Center" - use the same string
	already in yast2-control-center package so we can use existing translations.

2007-02-28  Scott Reeves  <sreeves@novell.com>
	* /etc/YaST-gnome.desktop.in
	* /etc/Makefile.am
	* /etc/yast2-control-center-gnome.schemas.in
	* /src/control-center.c:
	Another attempted fix for 240240
	Update schema file to install in a better gconf prefix and modify
	strings to exactly match existing ones in g-m-m CC.
