@@ -1,9 +1,9 @@
 <gconfschemafile>
 	<schemalist>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_actions_list</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_actions_list</applyto>
-			<owner>y2cc-gnome</owner>
+			<key>/schemas/apps/yast-control-center/cc_actions_list</key>
+			<applyto>/apps/yast-control-center/cc_actions_list</applyto>
+			<owner>yast-control-center</owner>
 			<type>list</type>
 			<list_type>string</list_type>
 			<default>[]</default>
@@ -13,9 +13,9 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_static_action</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_static_action</applyto>
-			<owner>y2cc-gnome</owner>
+			<key>/schemas/apps/yast-control-center/cc_exit_shell_on_static_action</key>
+			<applyto>/apps/yast-control-center/cc_exit_shell_on_static_action</applyto>
+			<owner>yast-control-center</owner>
 			<type>bool</type>
 			<default>false</default>
 			<locale name="C">
@@ -24,9 +24,9 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_start</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_start</applyto>
-			<owner>y2cc-gnome</owner>
+			<key>/schemas/apps/yast-control-center/cc_exit_shell_on_action_start</key>
+			<applyto>/apps/yast-control-center/cc_exit_shell_on_action_start</applyto>
+			<owner>yast-control-center</owner>
 			<type>bool</type>
 			<default>false</default>
 			<locale name="C">
@@ -35,9 +35,9 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_help</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_help</applyto>
-			<owner>y2cc-gnome</owner>
+			<key>/schemas/apps/yast-control-center/cc_exit_shell_on_action_help</key>
+			<applyto>/apps/yast-control-center/cc_exit_shell_on_action_help</applyto>
+			<owner>yast-control-center</owner>
 			<type>bool</type>
 			<default>false</default>
 			<locale name="C">
@@ -46,9 +46,9 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_add_remove</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_add_remove</applyto>
-			<owner>y2cc-gnome</owner>
+			<key>/schemas/apps/yast-control-center/cc_exit_shell_on_action_add_remove</key>
+			<applyto>/apps/yast-control-center/cc_exit_shell_on_action_add_remove</applyto>
+			<owner>yast-control-center</owner>
 			<type>bool</type>
 			<default>false</default>
 			<locale name="C">
@@ -57,9 +57,9 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_upgrade_uninstall</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_upgrade_uninstall</applyto>
-			<owner>y2cc-gnome</owner>
+			<key>/schemas/apps/yast-control-center/cc_exit_shell_on_action_upgrade_uninstall</key>
+			<applyto>/apps/yast-control-center/cc_exit_shell_on_action_upgrade_uninstall</applyto>
+			<owner>yast-control-center</owner>
 			<type>bool</type>
 			<default>false</default>
 			<locale name="C">
